@@ -1,5 +1,11 @@
 2004-11-28  Matti Aarnio  <mea@zmailer.org>
 
+	* smtpserver/subdaemons.c, smtpserver/smtpserver.c,
+	  smtpserver/subdaemon-ctf.c, smtpserver/subdaemon-rtr.c,
+	  smtpserver/subdaemon-trk.c:
+	    Remove unnecessary (and in fact harmfull) SIGCHLD
+	    ignoring commands.
+
 	* router/daemonsub.c, router/router.c:
 	    Disable an attempt at handling the router SEGV fault
 	    reporting in a gracefull manner printing to log...
